CKA/security/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db # label on the target pod to apply the policy
  policyTypes:
  - Ingress # by default, results will be sent to the api pod on 3306
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector: # by default, all pods in all namespaces with the label api-pod will connect
        matchLabels:
          kubernetes.io/metadata.name: prod
    - ipBlock: # define range of ip addr to hit the db pod
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
  egress: # egress rules
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
      ports:
      - protocol: TCP
        port: 80
